add style for list page

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,9 @@
 @import 'general/reset';
 @import 'general/general';
 @import 'general/font';
+@import 'general/form';
 
 @import 'modules/nav';
+@import 'modules/search';
+@import 'modules/list';
+@import 'modules/button';
