--- a/templates/includes/nav.html.twig
+++ b/templates/includes/nav.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
 <ul class="nav">
-    <li class="nav__item"><a href="{{ path('product_list') }}">List products</a></li>
+    <li class="nav__item"><a href="{{ path('product_list') }}">Show all products</a></li>
     <li class="nav__item"><a href="{{ path('product') }}">Create new product</a></li>
 </ul>
 {% endblock %}
