--- a/assets/css/modules/nav.scss
+++ b/assets/css/modules/nav.scss
@@ -1,5 +1,5 @@
 .nav {
-    padding: 0 5%;
+    padding: 0 5vw;
     height: 60px;
     display: flex;
     align-items: center;
@@ -7,5 +7,9 @@
 
     &__item {
         padding: 0 20px;
+
+        &:first-child {
+            padding-left: 0;
+        }
     }
 }
