add style for product page

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,4 +6,6 @@
 @import 'modules/nav';
 @import 'modules/search';
 @import 'modules/list';
+@import 'modules/product';
 @import 'modules/button';
+@import 'modules/text';
