add style form create/edit

--- a/assets/css/general/form.scss
+++ b/assets/css/general/form.scss
@@ -4,3 +4,16 @@ input {
     padding: 0 10px;
     margin: 0 20px;
 }
+
+#form {
+    div {
+        padding-bottom: 20px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+
+        input {
+            height: 100%;
+        }
+    }
+}
